--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@
     </div>
     <script src="script.js"></script>
   </body>
-  <footer>Made by Aymen</footer>
+  <footer>Made by Aymen Moh</footer>
 </html>
